--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -28,7 +28,7 @@
 #nav-bar:focus-within:not([urlbar-exceeds-toolbar-bounds]),
 #nav-bar[customizing],
 #mainPopupSet:hover ~ box > toolbox > .browser-toolbar:not([urlbar-exceeds-toolbar-bounds])
-  {backdrop-filter: blur(16px)}
+  {backdrop-filter: blur(16px) saturate(200%)}
 
 
 
@@ -97,7 +97,15 @@ menuseparator {
   border-radius: 0 !important;
   box-shadow: none !important}
 
-#urlbar[breakout][breakout-extend][open] > #urlbar-background {backdrop-filter: blur(32px)}
+#tracking-protection-icon-container:hover,
+#tracking-protection-icon-container[open],
+.identity-box-button:hover,
+.identity-box-button[open],
+#identity-icon-box[open],
+#identity-permission-box[open],
+.urlbar-page-action:not([disabled]):hover,
+.urlbar-page-action:not([disabled])[open] {
+	background-color: var(--toolbarbutton-hover-background) !important}
 
 #identity-icon-box {max-width: calc(50px + 10em) !important}
 
@@ -105,10 +113,16 @@ menuseparator {
 
 .urlbarView-action {margin-block: -4px !important}
 
+.urlbarView-row:not([type="switchtab"]) .urlbarView-action,
 .urlbarView-title-separator,
-.urlbarView-action,
 .search-one-offs > hbox
   {display:none !important}
+
+#urlbar[breakout][breakout-extend][open] > #urlbar-background,
+.urlbarView-row[type="switchtab"]:hover .urlbarView-action,
+.urlbarView-row[type="switchtab"][aria-selected="true"] .urlbarView-action {
+  background-color: color-mix(in srgb, var(--lwt-toolbar-field-focus) 85%, transparent) !important;
+  backdrop-filter: blur(32px) saturate(200%)}
 
 
 
@@ -125,7 +139,7 @@ menuseparator {
 
 #statuspanel-label {
   border: 0 !important;
-  backdrop-filter: blur(32px);
+  backdrop-filter: blur(32px) saturate(200%);
   background-color: #fff8 !important;
   color: #000 !important}
 
@@ -177,17 +191,13 @@ menuseparator {
 
 /*   Default theme   */
 #main-window[lwtheme-mozlightdark] * {
-  --lightness-nav: 97%;
-  --lightness-contrasting: 0%;
-  
-  --hue: 240;
-  --saturation: 10%;
-  --nav:                    hsla(var(--hue), var(--saturation), var(--lightness-nav), .85);
-  --arrowpanel-background:   hsl(var(--hue), var(--saturation), calc(var(--lightness-nav) + 3%));
-  --arrowpanel-border-color: hsl(var(--hue), var(--saturation), calc(var(--lightness-nav) - 6%));
-  --1:                      hsla(var(--hue), var(--saturation), var(--lightness-contrasting), .05);
-  --2:                      hsla(var(--hue), var(--saturation), var(--lightness-contrasting), .08);
-  --text:                    hsl(var(--hue), var(--saturation), var(--lightness-contrasting));
+  --background:              #0e0e11;
+  --color:                   #e8e8e8;
+  --nav:                     color-mix(in srgb, var(--background) 85%, transparent);
+  --arrowpanel-background:   color-mix(in srgb, var(--background) 95%, var(--color));
+  --arrowpanel-border-color: color-mix(in srgb, var(--background) 90%, var(--color));
+  --1:                       color-mix(in srgb, var(--color) 6%, transparent);
+  --2:                       color-mix(in srgb, var(--color) 10%, transparent);
 
   --lwt-accent-color: var(--nav);
   --toolbar-bgcolor: var(--nav);
@@ -209,22 +219,17 @@ menuseparator {
   --panel-banner-item-background-color: var(--2);
   --zoom-controls-bgcolor: var(--2);
 
-  --toolbarbutton-icon-fill: var(--text);
-  --toolbar-color: var(--text);
-  --lwt-toolbar-field-color: var(--text);
-  --lwt-toolbar-field-focus-color: var(--text);
-  --arrowpanel-color: var(--text);
+  --toolbarbutton-icon-fill: var(--color);
+  --toolbar-color: var(--color);
+  --lwt-toolbar-field-color: var(--color);
+  --lwt-toolbar-field-focus-color: var(--color);
+  --arrowpanel-color: var(--color);
 }
 
-#main-window[lwtheme-mozlightdark] #urlbar-background {background-color: var(--nav) !important}
-#main-window:not([lwtheme-mozlightdark]) #urlbar-background {background-color: color-mix(in srgb, var(--lwt-toolbar-field-focus) 85%, transparent) !important}
 
-#main-window[lwtheme-mozlightdark] #customization-container {background-color: hsl(var(--hue), var(--saturation), var(--lightness-nav)) !important}
-
-/*   Default dark theme   */
-#main-window[lwthemetextcolor="bright"][lwtheme-mozlightdark] * {
-  --lightness-nav: 6%;
-  --lightness-contrasting: 92%;
-  
-  --arrowpanel-border-color: hsl(var(--hue), var(--saturation), calc(var(--lightness-nav) + 6%));
+/*   Light   */
+#main-window[lwtheme-mozlightdark]:not([lwthemetextcolor="bright"]) * {
+  --background:              #fcfcfd;
+  --color:                   #000005;
+  --arrowpanel-background:   var(--background);
 }
