--- a/Sidebery-Sidebar.css
+++ b/Sidebery-Sidebar.css
@@ -1,28 +1,29 @@
+	/*   Dark theme   */
 @media (prefers-color-scheme:dark), (prefers-color-scheme: no-preference) {
 	#root[data-style="auto"], #root[data-style="dark"] {
 
-	--hue: 240;
-	--saturation: 6%;
-	--bg:          hsl(var(--hue), var(--saturation), 5%);
-	--ctx-menu-bg: hsl(var(--hue), var(--saturation), 8%);
-	--1:          hsla(var(--hue), var(--saturation), 100%, .05);
-	--2:          hsla(var(--hue), var(--saturation), 100%, .08);
+	--bg: #0e0e11;
+
+	--tabs-bg-hover:     #1c1c1e;
+	--tabs-bg-active:    #1c1c1e;
+	--tabs-activated-bg: #252528;
+
+	--ctx-menu-bg:       #19191C;
+	--ctx-menu-bg-hover: #262629;
+	--ctx-menu-shadow: 0 0 0 1px #242427), 0 3px 5px 0 black;
+
+	--bookmarks-node-bg-hover:  #fcfcfd16;
+	--bookmarks-node-bg-active: #fcfcfd16;
+}}
 
 
-	--tabs-bg-hover: var(--1);
-	--tabs-bg-active: var(--1);
-	--tabs-activated-bg: var(--2);
+	/*   Light theme   */
+@media (prefers-color-scheme:light){
+	#root[data-style="auto"], #root[data-style="light"]{
 
-	--bookmarks-node-bg-hover: var(--1);
-
-	--ctx-menu-shadow: 0 3px 5px 0 black;
-}
-
-	.Tab:hover[data-active]:not([data-selected]) .title,
-	.PinnedTab:hover[data-active]:not([data-selected]) .title {
-		color: var(--tabs-activated-fg)}
-}
-
+	--bg: #fcfcfd;
+	--ctx-menu-bg-hover: #ededee;
+}}
 
 
 * {
@@ -33,10 +34,13 @@
 	--border-fg: transparent;
 	--pinned-dock-overlay-bg: transparent;
 
-	--ctx-menu-bg-hover: var(--tabs-bg-hover);
-
 	--bookmarks-separator-height: 5px;
 }
+
+
+.Tab:hover[data-active]:not([data-selected]) .title,
+.PinnedTab:hover[data-active]:not([data-selected]) .title {
+	color: var(--tabs-activated-fg)}
 
 
 
