--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -62,7 +62,8 @@
 /*   Bookmarks   */
 .bookmark-item .toolbarbutton-icon,
 .openintabs-menuitem,
-.bookmarks-actions-menuseparator
+.bookmarks-actions-menuseparator,
+#PlacesToolbar menupopup menuseparator::before
   {display:none}
 
 toolbarbutton.bookmark-item {
@@ -76,7 +77,7 @@ toolbarbutton.bookmark-item menupopup:not(menupopup menupopup) {margin: -5px -3p
 
 #PlacesToolbar menupopup menuseparator {padding: 0 !important}
 
-#PlacesToolbar menupopup menuseparator::before {display: none}
+.menupopup-arrowscrollbox {border: 1px solid var(--panel-border-color) !important}
 
 
 
@@ -104,8 +105,6 @@ menuseparator {
 .addon-banner-item,
 .panel-banner-item {
   margin: 0 5px 4px !important}
-
-.menupopup-arrowscrollbox {border: 1px solid var(--panel-border-color) !important}
 
 .toolbaritem-combined-buttons:not([widget-type="button-and-view"]),
 .toolbaritem-menu-buttons {
@@ -156,6 +155,10 @@ menuseparator {
 .urlbarView-row[type="switchtab"][aria-selected="true"] .urlbarView-action {
   background-color: color-mix(in srgb, var(--lwt-toolbar-field-focus) 85%, transparent) !important;
   backdrop-filter: blur(32px) saturate(200%)}
+
+:root {--lwt-toolbar-field-focus: var(--toolbar-field-focus-background-color)}
+
+.urlbarView-row[label="Firefox Suggest"] {display: none !important}
 
 
 
@@ -271,3 +274,10 @@ panel, menupopup {opacity: .98 !important}
   --background:  #fcfcfd;
   --color:       #000005;
 }
+
+
+#main-window[lwtheme-mozlightdark] tooltip {
+  -moz-appearance: none !important;
+  background-color: var(--background) !important;
+  border: 1px solid var(--3) !important;
+  color: var(--color) !important}
